font awesome fix on firefox

--- a/app/styles/default.scss
+++ b/app/styles/default.scss
@@ -73,6 +73,7 @@ div {
 			text-transform: lowercase;
 		}
 		span:after {
+			font-family: 'FontAwesome';
 			content: '\f105';
 			padding: 0 1%;
 			font-size: 14px;
